<resources>
    <string name="app_name">My Application</string>
    <string name="displays_des">displays des</string>
    <string name="settings">settings</string>
    <string name="date">Date</string>
    <string name="p">p</string>
    <string name="subject">Subject</string>
    <string name="sort_item">Sort Item</string>
    <string name="sort_order">Sort Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="togglebutton">togglebutton</string>
    <string name="save">save</string>
    <string name="priority">Priority</string>
    <string name="subject">Subject</string>
    <string name="add_a_note">Add a note</string>
    <string name="Priority">Priority:</string>
    <string name="low">Low</string>
    <string name="med">Med</string>
    <string name="high">High</string>
    <string name="displays_des">displays des</string>
    <string name="settings">settings</string>
    <string name="note">Note</string>
</resources>